crates/swc/tests/tsc-references/assignmentCompatWithObjectMembers5_es5.1.normal.js
import _class_call_check from "@swc/helpers/src/_class_call_check.mjs";
var C = function C() {
    "use strict";
    _class_call_check(this, C);
};
var c;
var i;
c = i; // error
i = c; // error
